# WesternElectricSPC

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  context.py  pyproject.toml  requirements.txt  setup.py
Docs/: resources.txt
Project/: core.py
Tests/: TestData.csv  Tests.py  context.py
docs/: Changelog.md  Resources.md
reports/flake8/: index.html
src/: core.py
